# hdf5

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html  search-index.js
hdf5/: fn.version.html  index.html  sidebar-items.js  struct.Encoder.html  struct.Error.html  struct.File.html  struct.Writer.html  trait.Data.html  trait.IntoData.html  type.Result.html
hdf5/data/: sidebar-items.js  trait.Data.html  trait.IntoData.html
hdf5/encoder/: sidebar-items.js  struct.Encoder.html
hdf5/file/: sidebar-items.js  struct.File.html
hdf5/writer/: sidebar-items.js  struct.Writer.html
hdf5_sys/: constant.H5F_ACC_CREAT.html  constant.H5F_ACC_DEBUG.html  constant.H5F_ACC_EXCL.html  constant.H5F_ACC_RDONLY.html  constant.H5F_ACC_RDWR.html  constant.H5F_ACC_TRUNC.html  constant.H5P_DEFAULT.html  constant.H5S_ALL.html  constant.H5S_UNLIMITED.html  enum.H5C_cache_decr_mode.html  enum.H5C_cache_flash_incr_mode.html  enum.H5C_cache_incr_mode.html  enum.H5D_alloc_time_t.html  enum.H5D_fill_time_t.html  enum.H5D_fill_value_t.html  enum.H5D_layout_t.html  enum.H5D_mpio_actual_chunk_opt_mode_t.html  enum.H5D_mpio_actual_io_mode_t.html  enum.H5D_space_status_t.html  enum.H5E_direction_t.html  enum.H5E_type_t.html  enum.H5FD_file_image_op_t.html  enum.H5F_close_degree_t.html  enum.H5F_libver_t.html  enum.H5F_mem_t.html  enum.H5F_scope_t.html  enum.H5G_storage_type_t.html  enum.H5I_type_t.html  enum.H5L_type_t.html  enum.H5O_mcdt_search_ret_t.html  enum.H5O_type_t.html  enum.H5R_type_t.html  enum.H5S_class_t.html  enum.H5S_sel_type.html  enum.H5S_seloper_t.html  enum.H5T_bkg_t.html  enum.H5T_class_t.html  enum.H5T_cmd_t.html  enum.H5T_conv_except_t.html  enum.H5T_conv_ret_t.html  (+531 more)
hdf5_sys/H5ACpublic/: sidebar-items.js  (+1 more)
src/: data.rs  dataset.rs  dataspace.rs  datatype.rs  decoder.rs  encoder.rs  file.rs  lib.rs  link.rs  value.rs  writer.rs
tests/: encode.rs  lib.rs  serialize.rs  write.rs
(+585 files in other folders)
