[package]
name = "hdf5"
version = "0.3.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/hdf5"
homepage = "https://github.com/stainless-steel/hdf5"
documentation = "https://stainless-steel.github.io/hdf5"
description = "The package provides an interface to HDF5."

[features]
default = ["serialize"]
serialize = ["rustc-serialize"]

[dependencies]
hdf5-sys = "0.2"
libc = "0.2"

[dependencies.rustc-serialize]
version = "0.3"
optional = true

[dev-dependencies]
temporary = "0.5"

[[test]]
name = "hdf5"
path = "tests/lib.rs"
